<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyStockTracker</string>

    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="add">add</string>
    <string name="title">title</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="nickname">nickname</string>
    <string name="comment">comment:</string>
    <string name="stock_deleted_alert">Delete stock: %s?</string>
    <string name="stock_added_alert">Successfully added stock: %s</string>
    <string name="alert">Alert</string>
    <string name="congrat">Congratulation!!!</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">setting</string>
    <string name="done">done</string>
    <string name="stock_code">stock code</string>
    <string name="amount">amount:</string>
    <string name="current_price">current price:</string>
    <string name="bought_price">bought price:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_web_fragment">hello_web_fragment</string>
    <string name="hello_info_fragment">hello_info_fragment</string>

    <string name="version">Version %s</string>
    <string name="info">App Information</string>
    <string name="web">Web View</string>
    <string name="textview">TextView</string>
    <string name="save">save</string>
    <string name="card_color">card color:</string>
    <string name="grey_card">grey card</string>
    <string name="red_card">red card</string>
    <string name="code_color">Code Color</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="input_color">Input Color</string>
    <string name="purple_input">Purple Input</string>
    <string name="blue_input">Blue Input</string>
    <string name="green_code">Green Code</string>
    <string name="yellow_code">Yellow Code</string>
    <string name="dialog_setting">Dialog Setting</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="url">URL</string>
    <string name="go">GO</string>
</resources>