<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/inputs_container"
        android:layout_width="394dp"
        android:layout_height="250dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/stock_code_editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/stock_code"
            android:inputType="textCapCharacters" />

        <EditText
            android:id="@+id/amount_editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="number" />

        <EditText
            android:id="@+id/current_price_editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/current_price"
            android:inputType="number" />

        <EditText
            android:id="@+id/bought_price_editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/bought_price"
            android:inputType="number"
            android:lines="1"
            android:scrollHorizontally="false" />

        <EditText
            android:id="@+id/comment_editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/comment"
            android:inputType="textLongMessage|textMultiLine"
            android:lines="1"
            android:scrollHorizontally="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputs_container"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/add" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
