<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@drawable/card"
    android:orientation="vertical">

    <TextView
        android:id="@+id/stock_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/code"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/stock_code" />

    <TextView
        android:id="@+id/stock_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/stock_amount_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_bought_price_edit"
        tools:text="@string/amount" />

    <TextView
        android:id="@+id/stock_amount_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/title"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.665"
        app:layout_constraintStart_toEndOf="@+id/stock_comment_edit"
        app:layout_constraintTop_toBottomOf="@+id/stock_amount"
        tools:text="0" />

    <TextView
        android:id="@+id/stock_current_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/current_price" />

    <TextView
        android:id="@+id/stock_current_price_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/title"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/stock_comment"
        app:layout_constraintEnd_toStartOf="@+id/stock_bought_price_edit"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_current_price"
        app:layout_constraintVertical_bias="0.0"
        tools:text="0" />

    <TextView
        android:id="@+id/stock_bought_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.859"
        app:layout_constraintBottom_toTopOf="@+id/stock_bought_price_edit"
        app:layout_constraintStart_toEndOf="@+id/stock_current_price"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/bought_price" />

    <TextView
        android:id="@+id/stock_bought_price_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/title"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_bought_price"
        tools:text="0" />

    <TextView
        android:id="@+id/stock_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/stock_comment_edit"
        app:layout_constraintEnd_toStartOf="@+id/stock_amount"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/comment" />

    <TextView
        android:id="@+id/stock_comment_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/title"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_comment"
        tools:text="no comment" />

</androidx.constraintlayout.widget.ConstraintLayout>
